# mla

./: Makefile  README.md  accession_list  alignment_plot_sweep.ipynb  all_cols.taxids.txt  assemble.sh  classify_ga.py  classify_mg.py  classify_plast.py  col_names.shuf.head41026.txt  col_names.shuf.tail10257.txt  environment.yml  extract.sh  gaf_to_mtgout.sh  get_seqs_from_gaf.py  make_graph.sh  make_sample.sh  make_subset.sh  make_test.sh  map_query_ga.sh  map_query_ga_joint.sh  map_query_mla.sh  map_query_plast.sh  map_query_slc.sh  opal.yml  opal_full.yml  parse_plast.cpp  path_cover.sh  run_graphaligner.sh  run_metagraph.sh  run_minigraph.sh  tax_analysis.ipynb  test_names.txt  test_reads.hifi.shuf.fa.head2000.fa.ga.gaf.results.out.pkl  test_reads.hifi.shuf.fa.head2000.fa.gmg.gaf.results.out.pkl  test_reads.hifi.shuf.fa.head2000.fa.mtg.out.pkl  test_reads.hifi.shuf.fa.head2000.fa.mtgfullnochain.out.pkl  test_reads.hifi.shuf.fa.head2000.fa.mtgnochain.out.pkl  test_reads.hifi.shuf.fa.head2000.fa.tcg.out.pkl  test_reads.pacbio.shuf.fa.head2000.fa.ga.gaf.results.out.pkl  (+12 more)
plast_cmake/: CMakeLists.txt
